--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,114 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.teerasaksathu.tungton.activity.MainActivity">
 
+
     <LinearLayout
+        android:id="@+id/top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="240dp"
-            android:layout_margin="20dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-
-            >
+            android:layout_gravity="start">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="40dp"
+                android:gravity="top"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="ยอดรวมชำระ"
-                    android:textSize="30dp"
-                    />
+                    android:gravity="right"
+                    android:paddingTop="8dp"
+                    android:text="สินค้า"
+                    android:textSize="18dp" />
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:id="@+id/sumproduct"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:text="43"
-                    android:textSize="30dp"
-                    android:textColor="#ff584f"/>
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="20dp" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:paddingTop="8dp"
+                    android:text="ชิ้น"
+                    android:textSize="18dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:paddingTop="8dp"
+                    android:text="รวมเป็นเงิน"
+                    android:textSize="18dp" />
+
+                <TextView
+                    android:id="@+id/sumprice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="#ff584f"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:paddingTop="8dp"
                     android:text="บาท"
-                    android:textSize="30dp"/>
+                    android:textSize="18dp" />
             </LinearLayout>
+
             <LinearLayout
+
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="50dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:id="@+id/nameproduct"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="ชำระเงิน"
-                    android:textSize="30dp"
-                    />
+                    android:gravity="right"
+                    android:paddingTop="5dp"
+                    android:text="สินค้า"
+                    android:textSize="25dp" />
 
-                <EditText
+                <TextView
+                    android:id="@+id/price"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="number"
-                     />
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="25dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="0"
-                    android:text="บาท"
-                    android:textSize="30dp" />
-
+                    android:layout_weight="1"
+                    android:paddingTop="5dp"
+                    android:text="บาท / ชิ้น"
+                    android:textSize="25dp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="40dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:paddingTop="8dp"
+                    android:text="จำนวนชิ้น"
+                    android:textSize="18dp" />
+
+                <Button
+                    android:layout_width="10dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="เงินทอน"
-                    android:textSize="30dp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:text="57"
-                    android:textSize="30dp"/>
+                    android:background="#ffffff"
+                    android:text="-"
+                    android:textSize="15dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="0"
-                    android:text="บาท"
-                    android:textSize="30dp" />
+                    android:paddingTop="5dp"
+                    android:text="0"
+                    android:textSize="18dp" />
+
+                <Button
+                    android:layout_width="10dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="#ffffff"
+                    android:text="+"
+                    android:textSize="15dp" />
+
             </LinearLayout>
         </LinearLayout>
 
-        <Button
+        <SurfaceView
+            android:id="@+id/cameraView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="ยืนยัน"
-            android:textSize="30dp"
-            android:textColor="#ffffff"
-            android:background="#ff584f"/>
+            android:layout_height="match_parent"
+            android:visibility="visible"
+            android:layout_weight="1"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="2"
+            android:gravity="bottom"
+            android:layout_gravity="bottom">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="bottom">
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:paddingTop="8dp"
+                    android:text="รายละเอียด"
+                    android:textColor="#009fff"
+                    android:textSize="20dp" />
+
+                <Button
+                    android:id="@+id/pay"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="#ff584f"
+                    android:text="ชำระเงิน"
+                    android:textColor="#ffffff" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:gravity="bottom"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="#ffffff"
+                    android:text="สินค้า" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="#ffffff"
+                    android:text="ขาย" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="#ffffff"
+                    android:text="บัญชี" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
+
