--- a/app/src/main/res/layout/dialog_fragment_sale_quantity.xml
+++ b/app/src/main/res/layout/dialog_fragment_sale_quantity.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.Popup"
     android:layout_marginHorizontal="70dp"
     android:layout_marginVertical="200dp">
 
@@ -37,14 +36,14 @@
                 android:textSize="18dp"/>
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btnPlusSaleQuantity"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:text="+" />
 
             <TextView
-                android:id="@+id/textView22"
+                android:id="@+id/tvSaleQuantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
@@ -54,7 +53,7 @@
                 />
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/btnMinusSaleQuantity"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
@@ -68,7 +67,7 @@
             android:gravity="bottom">
 
             <Button
-                android:id="@+id/button8"
+                android:id="@+id/btnCloseDialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
