--- a/app/src/main/res/layout/dialog_fragment_sale_quantity.xml
+++ b/app/src/main/res/layout/dialog_fragment_sale_quantity.xml
@@ -10,13 +10,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="15dp">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="2"
+            android:gravity="center"
             android:text="เพื่มสินค้าของท่าน"
             android:textSize="20dp"/>
 
@@ -33,13 +35,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:text="เพื่ม/ลดสินค้า"
+                android:gravity="center"
                 android:textSize="18dp"/>
 
             <Button
                 android:id="@+id/btnPlusSaleQuantity"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"
                 android:text="+" />
 
             <TextView
@@ -56,7 +58,6 @@
                 android:id="@+id/btnMinusSaleQuantity"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"
                 android:text="-" />
         </LinearLayout>
 
